# GameOfLife

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_web.sh  custom_shell.html  init.sh
src/: game.cpp  game.h  globals.cpp  globals.h  grid.cpp  grid.h  main.cpp  simulation.cpp  simulation.h
web-build/: index.js  index.wasm
